Bug 22310 - Locale conversion to support 3 letter language; Mac OS locale parser; r=smontagu